clang/test/BSC/Positive/Trait/GenericTrait/trait_cast_trait/trait_cast_trait.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

trait F<T> {
  T foo(This *this);
};

struct S {};

int struct S::foo(This *this) {
  return 1;
}

impl trait F<int> for struct S;

int main() {
  struct S s;
  trait F<int> *p = &s;
  trait F<int> *p1 = (trait F<int> *)&s;
  trait F<int> *q = p;
  trait F<int> *q1 = (trait F<int> *)p;
  q = p;
  q1 = (trait F<int> *)p;
}