clang/test/BSC/Negative/Ownership/Borrow/borrow_trait/borrow_trait.cbs
// RUN: %clang_cc1 -verify %s
// expected-no-diagnostics

trait T {
  static int f(This* this);
};

int int::f(int* this) {
  return *this;
}

impl trait T for int;

int main() {
  int a = 1;
  int* t = &a;
  trait T* borrow p = &mut *t;
  a = 2;
  t = &a;
  p->f();
  return 0;
}